--- a/src/components/Caballero/Caballero.css
+++ b/src/components/Caballero/Caballero.css
@@ -1,26 +1,43 @@
 .caballero-section {
-    display: flex;
-    align-items: flex-start;
+  display: flex;
+  align-items: flex-start;
+  margin-top: 10px; /* Márgen superior */
+  margin-right: 60px; /* Márgen derecho */
+  margin-bottom: 10px; /* Márgen inferior */
+  margin-left: 60px; /* Márgen izquierdo */
+}
+
+
+
+.caballero-section-2 {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.image-container {
+  padding: 10px;
+}
+
+.image-container img {
+  width: 100%;
+  height: auto;
   }
-  
-  .caballero-section-1 {
-    flex: 2;
-  }
-  
-  .caballero-section-2 {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-  }
-  
-  .image-container {
-    padding: 10px;
-  }
-  
-  .image-container img {
-    width: 100%;
-    height: auto;
-  }
-  
-  
+
+
+#imagen-1{
+  width: 500px;
+  height: 600px;
+
+}
+
+#imagen-2{
+  width: 500px;
+  height: 283px;
+}
+
+#imagen-3{
+  width: 500px;
+  height: 283px;
+}
