--- a/src/components/Slider/Slider.css
+++ b/src/components/Slider/Slider.css
@@ -2,16 +2,16 @@
   position: relative;
   width: 100%;
   height: 100%;
-  overflow: hidden;
-  border: 1px solid black; /* Agregamos un borde negro al contenedor */
-  margin-top: 115px; /* Agrega un espacio de 20px en la parte superior */
+  overflow: hidden;/* Agregamos un borde negro al contenedor */
+  margin-top: 0px; /* Agrega un espacio de 20px en la parte superior */
 }
 .slider {
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 300px; /* Ajusta la altura según tus necesidades */
+  height: 300px; 
+  margin-top:120px ;
 }
 
 .slider-image {
