--- a/src/components/Caballero/Caballero.css
+++ b/src/components/Caballero/Caballero.css
@@ -7,8 +7,6 @@
   margin-left: 60px; /* Márgen izquierdo */
 }
 
-
-
 .caballero-section-2 {
   flex: 1;
   display: flex;
@@ -23,21 +21,35 @@
 .image-container img {
   width: 100%;
   height: auto;
-  }
+}
 
-
-#imagen-1{
+#imagen-1 {
   width: 500px;
   height: 600px;
-
 }
 
-#imagen-2{
+#imagen-2 {
   width: 500px;
   height: 283px;
 }
 
-#imagen-3{
+#imagen-3 {
   width: 500px;
   height: 283px;
+}
+
+/* Responsiveness */
+@media (max-width: 768px) {
+  .caballero-section {
+    flex-direction: column;
+    align-items: center;
+    margin: 10px;
+  }
+
+  #imagen-1,
+  #imagen-2,
+  #imagen-3 {
+    width: 100%;
+    height: auto;
+  }
 }
