--- a/src/components/Dama/Dama.css
+++ b/src/components/Dama/Dama.css
@@ -1,43 +1,55 @@
 .dama-section {
-    display: flex;
-    align-items: flex-start;
-    margin-top: 10px; /* Márgen superior */
-    margin-right: 60px; /* Márgen derecho */
-    margin-bottom: 10px; /* Márgen inferior */
-    margin-left: 60px; /* Márgen izquierdo */
-  }
-  
+  display: flex;
+  align-items: flex-start;
+  margin-top: 10px; /* Márgen superior */
+  margin-right: 60px; /* Márgen derecho */
+  margin-bottom: 10px; /* Márgen inferior */
+  margin-left: 60px; /* Márgen izquierdo */
+}
 
-  
-  .dama-section-2 {
-    flex: 1;
-    display: flex;
+.dama-section-2 {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.image-container {
+  padding: 10px;
+}
+
+.image-container img {
+  width: 100%;
+  height: auto;
+}
+
+#imagen-1 {
+  width: 500px;
+  height: 600px;
+}
+
+#imagen-2 {
+  width: 500px;
+  height: 283px;
+}
+
+#imagen-3 {
+  width: 500px;
+  height: 283px;
+}
+
+/* Responsiveness */
+@media (max-width: 768px) {
+  .dama-section {
     flex-direction: column;
-    gap: 10px;
+    align-items: center;
+    margin: 10px;
   }
-  
-  .image-container {
-    padding: 10px;
-  }
-  
-  .image-container img {
+
+  #imagen-1,
+  #imagen-2,
+  #imagen-3 {
     width: 100%;
     height: auto;
-    }
-  
-  
-  #imagen-1{
-    width: 500px;
-    height: 600px;
-  
   }
-
-  #imagen-2{
-    width: 500px;
-    height: 283px;
-  }
-
-  #imagen-3{
-    width: 500px;
-    height: 283px;
-  }
+}
