--- a/src/components/Slider/Slider.css
+++ b/src/components/Slider/Slider.css
@@ -1,23 +1,25 @@
 .slider-container {
   position: relative;
-  width: 110%;
+  width: 100%;
   height: 100%;
-  margin-top: 0px; /* Agrega un espacio de 20px en la parte superior */
+  margin-top: 20px;
+  overflow: hidden;
 }
+
 .slider {
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 300px; 
-  margin-top:30px ;
+  height: 300px;
+  margin-top: 30px;
+  transition: transform 0.5s ease-in-out;
 }
 
 .slider-image {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  transition: transform 0.5s ease-in-out;
   position: absolute;
 }
 
@@ -47,4 +49,17 @@
 
 .slider-button.next {
   right: 10px;
+}
+
+/* Responsive */
+@media (max-width: 768px) {
+  .slider {
+    height: 200px;
+  }
+}
+
+@media (max-width: 480px) {
+  .slider {
+    height: 150px;
+  }
 }
