--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,10 +1,24 @@
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.container {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.content {
+  flex: 1;
+}
+
 footer {
-  position: fixed;
   background-color: #000;
   color: #fff;
   padding: 20px;
-  left: 0;
-  bottom: 0;
   width: 100%;
 }
 
