Búsqueda en navbar funcional

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -66,6 +66,11 @@
 .navbar-search {
   display: flex;
   align-items: center;
+  position: relative; /* Asegura que la posición de la droplist sea relativa al contenedor de búsqueda */
+}
+
+.navbar-search:focus-within .search-results {
+  display: block;
 }
 
 .navbar-search input[type="text"] {
@@ -79,6 +84,38 @@
   padding: 5px 10px;
   margin-left: 10px;
 }
+.search-results {
+  display: none; 
+  position: absolute;
+  top: 100%;
+  left: 0;
+  max-height: 200px; 
+  overflow-y: auto;
+  background-color: #ffffff;
+  border: 1px solid #cccccc;
+  padding: 10px;
+  width: 100%;
+  box-sizing: border-box;
+  z-index: 9999;
+  transition: display 0.3s ease;
+}
+
+.search-results li {
+  padding: 8px; 
+  background-color: #f5f5f5;
+  border-bottom: 1px solid #ddd; 
+  color: #000000; 
+}
+
+.search-results li:last-child {
+  border-bottom: none; 
+}
+
+.search-results li:hover {
+  background-color: #000000; 
+  color: snow; 
+}
+
 
 .navbar-carrito {
   color: #fff;
