--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,9 @@
   margin: 0;
   box-sizing: border-box;
   margin-top: 0px;
+  font-family: 'Nanum Myeongjo', serif;
+font-family: 'Roboto', sans-serif;
+font-family: 'Ubuntu', sans-serif;
 }
 
 footer {
