--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -10,7 +10,7 @@
   padding: 20px;
 }
 
-.navbar a{
+.navbar a {
   text-decoration: none;
 }
 
@@ -66,7 +66,7 @@
 .navbar-search {
   display: flex;
   align-items: center;
-  position: relative; /* Asegura que la posición de la droplist sea relativa al contenedor de búsqueda */
+  position: relative;
 }
 
 .navbar-search:focus-within .search-results {
@@ -84,12 +84,13 @@
   padding: 5px 10px;
   margin-left: 10px;
 }
+
 .search-results {
-  display: none; 
+  display: none;
   position: absolute;
   top: 100%;
   left: 0;
-  max-height: 200px; 
+  max-height: 200px;
   overflow-y: auto;
   background-color: #ffffff;
   border: 1px solid #cccccc;
@@ -101,21 +102,20 @@
 }
 
 .search-results li {
-  padding: 8px; 
+  padding: 8px;
   background-color: #f5f5f5;
-  border-bottom: 1px solid #ddd; 
-  color: #000000; 
+  border-bottom: 1px solid #ddd;
+  color: #000000;
 }
 
 .search-results li:last-child {
-  border-bottom: none; 
+  border-bottom: none;
 }
 
 .search-results li:hover {
-  background-color: #000000; 
-  color: snow; 
+  background-color: #000000;
+  color: snow;
 }
-
 
 .navbar-carrito {
   color: #fff;
@@ -123,4 +123,35 @@
   font-size: 20px;
 }
 
+/* Estilos responsive */
 
+@media screen and (max-width: 768px) {
+  .navbar {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .navbar-menu {
+    flex-direction: column;
+    align-items: flex-start;
+    margin-top: 20px;
+  }
+
+  .navbar-menu li {
+    position: relative;
+  }
+
+  .navbar-menu a {
+    padding: 5px 10px;
+  }
+
+  .submenu {
+    position: static;
+    background-color: transparent;
+    padding: 0;
+  }
+
+  .submenu li {
+    margin-bottom: 0;
+ 
+  }}
