--- a/src/components/CartContent/CartContent.css
+++ b/src/components/CartContent/CartContent.css
@@ -3,7 +3,13 @@
   justify-content: space-around;
   flex-wrap: wrap;
   margin: 30px;
+  padding: 5px;
+  display: flex;
+  /*justify-content: center;*/
+  align-content: center;
 }
+
+
 .cartContent > img{
   height: 120px;
   width: 100px;
@@ -17,3 +23,92 @@
   text-align: center;
   margin-top: 60px;
 }
+
+.counterButton {
+  cursor: pointer;
+  font-size: x-large;
+  font-weight: bold;
+  color: rgb(27, 95, 110);
+
+}
+
+.counterButtonPlus{
+  cursor: pointer;
+  font-size: large;
+  font-weight: bold;
+  color: rgb(27, 95, 110);
+}
+
+.cartDeleteButton{
+  cursor: pointer;
+  border: solid transparent;
+  border-radius: 16px;
+  border-width: 0 0 4px;
+  padding: 3px 6px;
+  text-align: center;
+}
+  
+/*  <!-- HTML !-->
+  <button class="button-19" role="button">Button 19</button>
+  
+  /* CSS */
+  /*.button-19 {
+    appearance: button;
+    background-color: #1899D6;
+    border: solid transparent;
+    border-radius: 16px;
+    border-width: 0 0 4px;
+    box-sizing: border-box;
+    color: #FFFFFF;
+    cursor: pointer;
+    display: inline-block;
+    font-family: din-round,sans-serif;
+    font-size: 15px;
+    font-weight: 700;
+    letter-spacing: .8px;
+    line-height: 20px;
+    margin: 0;
+    outline: none;
+    overflow: visible;
+    padding: 13px 16px;
+    text-align: center;
+    text-transform: uppercase;
+    touch-action: manipulation;
+    transform: translateZ(0);
+    transition: filter .2s;
+    user-select: none;
+    -webkit-user-select: none;
+    vertical-align: middle;
+    white-space: nowrap;
+    width: 100%;
+  }
+  
+  .button-19:after {
+    background-clip: padding-box;
+    background-color: #1CB0F6;
+    border: solid transparent;
+    border-radius: 16px;
+    border-width: 0 0 4px;
+    bottom: -4px;
+    content: "";
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+    z-index: -1;
+  }
+  
+  .button-19:main,
+  .button-19:focus {
+    user-select: auto;
+  }
+  
+  .button-19:hover:not(:disabled) {
+    filter: brightness(1.1);
+    -webkit-filter: brightness(1.1);
+  }
+  
+  .button-19:disabled {
+    cursor: auto;
+  }
+  /*
