--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,46 +1,37 @@
-html,
-body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
+/* Footer.css */
 
-.container {
-  min-height: 100%;
+body {
   display: flex;
   flex-direction: column;
+  min-height: 100vh;
 }
 
-.content {
+main {
   flex: 1;
 }
 
 footer {
-  background-color: #000;
-  color: #fff;
-  padding: 20px;
   width: 100%;
+  background-color: #000000;
+  color: #ffffff;
+  position: absolute;
+  bottom: 0;
 }
 
-footer section {
+.footer {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
+  padding: 10px;
 }
 
-footer a {
-  color: #fff; /* Enlaces blancos */
+.footer a {
+  color: #ffffff;
   margin-left: 10px;
+  text-decoration: none;
 }
 
-/* Responsiveness */
-@media (max-width: 768px) {
-  footer section {
-    flex-direction: column;
-    align-items: flex-start;
-  }
-
-  footer a {
-    margin: 10px 0;
-  }
+.footer a:hover {
+  text-decoration: underline;
 }
