--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -140,8 +140,9 @@
   color: #fff;
   text-decoration: none;
   font-size: 20px;
+  cursor: pointer; 
+  text-decoration: none;
 }
-
 
 
 @media screen and (max-width: 768px) {
