--- a/src/components/CartContent/CartContent.css
+++ b/src/components/CartContent/CartContent.css
@@ -13,6 +13,7 @@
   height: 120px;
   width: 100px;
   text-align: center;
+  border-radius: 2px;
 }
 
 .cartTotal{
@@ -47,3 +48,10 @@
   text-align: center;
 }
   
+@media screen and (max-width: 768px){
+  .cartContent{
+    flex-direction: column;
+    align-items: center;
+    /*justify-content: center;*/
+  }
+}
